--- a/practice/pom.xml
+++ b/practice/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.patriciamolnar</groupId>
-  <artifactId>calculator</artifactId>
+  <artifactId>practice</artifactId>
   <version>learning-java</version>
 
-  <name>calculator</name>
+  <name>practice</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
