snake game complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.project.sourcePaths": [
         "<project_path>/src"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
